--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,8 @@
     --background: #1f2937;
     /* Tailwind's gray-800 */
     --text: #f9fafb;
-    --primary: #1d4ed8;
+    --primary: "#354358", 
+    /* "#1d4ed8", */
     /* Tailwind's blue-700 */
     --secondary: #4b5563;
     /* Tailwind's gray-600 */
